basic layout and styling done

--- a/ticTacToe/index.html
+++ b/ticTacToe/index.html
@@ -6,10 +6,33 @@
   <meta name="description" content="A Tic Tac Toe game">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Tic Tac Toe</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
   <script src="scripts.js" defer></script>
 </head>
 <body>
-  
+  <div class="container title">
+    <h1 id="message">Tic Tac Toe</h1>
+  </div>
+  <div class="container controls">
+    <button id="buttonOne">One Player</button>
+    <button id="buttonTwo">Two Player</button>
+  </div>
+  <div class="container board">
+      <div class="boardRow">
+        <p class="boardCell" id="one"></p>
+        <p class="boardCell" id="two"></p>
+        <p class="boardCell" id="three"></p>
+      </div>
+      <div class="boardRow">
+        <p class="boardCell" id="four"></p>
+        <p class="boardCell" id="five"></p>
+        <p class="boardCell" id="six"></p>
+      </div>
+      <div class="boardRow">
+        <p class="boardCell" id="seven"></p>
+        <p class="boardCell" id="eight"></p>
+        <p class="boardCell" id="nine"></p>
+      </div>
+  </div>
 </body>
 </html>
