added font and styling for played letters

--- a/ticTacToe/index.html
+++ b/ticTacToe/index.html
@@ -6,6 +6,7 @@
   <meta name="description" content="A Tic Tac Toe game">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Tic Tac Toe</title>
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"> 
   <link rel="stylesheet" href="style.css">
   <script src="scripts.js" defer></script>
 </head>
