added link to portfolio

--- a/ticTacToe/index.html
+++ b/ticTacToe/index.html
@@ -35,5 +35,6 @@
         <p class="boardCell" id="nine"></p>
       </div>
   </div>
+  <a class="link" href="https://www.natethedev.com" target="_blank" rel="noreferrer">Created by Nate Mallison</a>
 </body>
 </html>
