--- a/ticTacToe/index.html
+++ b/ticTacToe/index.html
@@ -20,19 +20,19 @@
   </div>
   <div class="container board">
       <div class="boardRow">
-        <p class="boardCell" id="one"></p>
-        <p class="boardCell" id="two"></p>
-        <p class="boardCell" id="three"></p>
+        <p class="boardCell" data-cell="1" id="one"></p>
+        <p class="boardCell" data-cell="2" id="two"></p>
+        <p class="boardCell" data-cell="3" id="three"></p>
       </div>
       <div class="boardRow">
-        <p class="boardCell" id="four"></p>
-        <p class="boardCell" id="five"></p>
-        <p class="boardCell" id="six"></p>
+        <p class="boardCell" data-cell="4" id="four"></p>
+        <p class="boardCell" data-cell="5" id="five"></p>
+        <p class="boardCell" data-cell="6" id="six"></p>
       </div>
       <div class="boardRow">
-        <p class="boardCell" id="seven"></p>
-        <p class="boardCell" id="eight"></p>
-        <p class="boardCell" id="nine"></p>
+        <p class="boardCell" data-cell="7" id="seven"></p>
+        <p class="boardCell" data-cell="8" id="eight"></p>
+        <p class="boardCell" data-cell="9" id="nine"></p>
       </div>
   </div>
   <a class="link" href="https://www.natethedev.com" target="_blank" rel="noreferrer">Created by Nate Mallison</a>
