--- a/simonSays/index.html
+++ b/simonSays/index.html
@@ -6,10 +6,20 @@
   <meta name="description" content="A Simon Says Game">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Simon Says</title>
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"> 
   <link rel="stylesheet" href="styles.css">
-  <script src="scripts.js"></script>
+  <script src="scripts.js" defer></script>
 </head>
 <body>
-  
+  <div class="bg">
+    <img data-src="https://s5.postimg.org/mc0hcg7pj/keith-misner-308-unsplash-min.jpg" alt="Picture of a Macbook Pro on a desk">
+  </div>
+  <div class="content">
+    <h1 class="card title">Simon Says</h1>
+  </div>
+  <div class="footer">
+    <a class="card link" href="https://unsplash.com/photos/h0Vxgz5tyXA?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Photo by Kieth Misner</a>
+    <a class="card link" href="https://www.natethedev.com">Created by Nate Mallison</a>
+  </div>
 </body>
 </html>
