added simon board with basic styling

--- a/simonSays/index.html
+++ b/simonSays/index.html
@@ -16,6 +16,31 @@
   </div>
   <div class="content">
     <h1 class="card title">Simon Says</h1>
+    <div class="board">
+      <div class="row">
+        <div class="simonButton" id="green"></div>
+        <div class="simonButton" id="red"></div>
+      </div>
+      <div class="controls">
+        <div>
+          <p class="card">Score: <span id="score">0</span></p>
+        </div>
+        <div class="buttonsContainer">
+          <button class="card" id="start">Start</button>
+          <button class="card" id="strict">Strict</button>
+          <div id="strictIndicator"></div>
+        </div>
+        <div>
+          <label for="onOff">Off</label>
+          <input class="card" type="checkbox" name="onOff" id="onOff">
+          <label for="onOff">On</label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="simonButton" id="yellow"></div>
+        <div class="simonButton" id="blue"></div>
+      </div>
+    </div>
   </div>
   <div class="footer">
     <a class="card link" href="https://unsplash.com/photos/h0Vxgz5tyXA?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Photo by Kieth Misner</a>
