added active button styling for controls, links and simon buttons. designed toggle for on off. hooked up strict mode button to output

--- a/simonSays/index.html
+++ b/simonSays/index.html
@@ -28,12 +28,14 @@
         <div class="buttonsContainer">
           <button class="card" id="start">Start</button>
           <button class="card" id="strict">Strict</button>
-          <div id="strictIndicator"></div>
+          <div class="strictIndicator"></div>
         </div>
-        <div>
-          <label for="onOff">Off</label>
-          <input class="card" type="checkbox" name="onOff" id="onOff">
-          <label for="onOff">On</label>
+        <div class="onOffContainer">
+          <p>Off</p>
+          <div class="card toggleBody">
+            <div class="toggle"></div>
+          </div>
+          <p>On</p>
         </div>
       </div>
       <div class="row">
@@ -43,8 +45,8 @@
     </div>
   </div>
   <div class="footer">
-    <a class="card link" href="https://unsplash.com/photos/h0Vxgz5tyXA?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Photo by Kieth Misner</a>
-    <a class="card link" href="https://www.natethedev.com">Created by Nate Mallison</a>
+    <a class="card link" target="_blank" rel="noreferrer" href="https://unsplash.com/photos/h0Vxgz5tyXA?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Photo by Kieth Misner</a>
+    <a class="card link" target="_blank" rel="noreferrer" href="https://www.natethedev.com">Created by Nate Mallison</a>
   </div>
 </body>
 </html>
