--- a/simonSays/index.html
+++ b/simonSays/index.html
@@ -18,8 +18,8 @@
     <h1 class="card title">Simon Says</h1>
     <div class="board">
       <div class="row">
-        <div class="simonButton" id="green"></div>
-        <div class="simonButton" id="red"></div>
+        <div class="simonButton" id="green" data-id="1"></div>
+        <div class="simonButton" id="red" data-id="2"></div>
       </div>
       <div class="controls">
         <div>
@@ -39,8 +39,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="simonButton" id="yellow"></div>
-        <div class="simonButton" id="blue"></div>
+        <div class="simonButton" id="yellow" data-id="3"></div>
+        <div class="simonButton" id="blue" data-id="4"></div>
       </div>
     </div>
   </div>
@@ -48,5 +48,9 @@
     <a class="card link" target="_blank" rel="noreferrer" href="https://unsplash.com/photos/h0Vxgz5tyXA?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Photo by Kieth Misner</a>
     <a class="card link" target="_blank" rel="noreferrer" href="https://www.natethedev.com">Created by Nate Mallison</a>
   </div>
+  <audio src="https://s3.amazonaws.com/freecodecamp/simonSound1.mp3" data-key="1"></audio>
+  <audio src="https://s3.amazonaws.com/freecodecamp/simonSound2.mp3" data-key="2"></audio>
+  <audio src="https://s3.amazonaws.com/freecodecamp/simonSound3.mp3" data-key="3"></audio>
+  <audio src="https://s3.amazonaws.com/freecodecamp/simonSound4.mp3" data-key="4"></audio>
 </body>
 </html>
