adjusted some styling, working on functionality

--- a/simonSays/index.html
+++ b/simonSays/index.html
@@ -15,11 +15,13 @@
     <img data-src="https://s5.postimg.org/mc0hcg7pj/keith-misner-308-unsplash-min.jpg" alt="Picture of a Macbook Pro on a desk">
   </div>
   <div class="content">
-    <h1 class="card title">Simon Says</h1>
+    <div class="card">
+      <h1 class="title">Simon Says</h1>
+    </div>
     <div class="board">
       <div class="row">
-        <div class="simonButton" id="green" data-id="1"></div>
-        <div class="simonButton" id="red" data-id="2"></div>
+        <div class="simonButton green" data-id="1"></div>
+        <div class="simonButton red" data-id="2"></div>
       </div>
       <div class="controls">
         <div>
@@ -39,8 +41,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="simonButton" id="yellow" data-id="3"></div>
-        <div class="simonButton" id="blue" data-id="4"></div>
+        <div class="simonButton yellow" data-id="3"></div>
+        <div class="simonButton blue" data-id="4"></div>
       </div>
     </div>
   </div>
