--- a/simonSays/index.html
+++ b/simonSays/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="bg">
-    <img data-src="https://s5.postimg.org/mc0hcg7pj/keith-misner-308-unsplash-min.jpg" alt="Picture of a Macbook Pro on a desk">
+    <img data-src="https://s5.postimg.org/mc0hcg7pj/keith-misner-308-unsplash-min.jpg" alt="Background of a wood floor">
   </div>
   <div class="content">
     <div class="card">
@@ -47,8 +47,8 @@
     </div>
   </div>
   <div class="footer">
-    <a class="card link" target="_blank" rel="noreferrer" href="https://unsplash.com/photos/h0Vxgz5tyXA?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Photo by Kieth Misner</a>
-    <a class="card link" target="_blank" rel="noreferrer" href="https://www.natethedev.com">Created by Nate Mallison</a>
+    <a class="card link" target="_blank" rel="noreferrer" rel="noopener" href="https://unsplash.com/photos/h0Vxgz5tyXA?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Photo by Kieth Misner</a>
+    <a class="card link" target="_blank" rel="noreferrer" rel="noopener" href="https://www.natethedev.com">Created by Nate Mallison</a>
   </div>
   <audio src="https://s3.amazonaws.com/freecodecamp/simonSound1.mp3" data-key="1"></audio>
   <audio src="https://s3.amazonaws.com/freecodecamp/simonSound2.mp3" data-key="2"></audio>
