changed score to round, added input prevention when simon saying

--- a/simonSays/index.html
+++ b/simonSays/index.html
@@ -25,7 +25,7 @@
       </div>
       <div class="controls">
         <div>
-          <p class="card">Score: <span id="score">0</span></p>
+          <p class="card">Round: <span id="round">0</span></p>
         </div>
         <div class="buttonsContainer">
           <button class="card" id="start">Start</button>
