--- a/simonSays/index.html
+++ b/simonSays/index.html
@@ -50,9 +50,9 @@
     <a class="card link" target="_blank" rel="noreferrer" rel="noopener" href="https://unsplash.com/photos/h0Vxgz5tyXA?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Photo by Kieth Misner</a>
     <a class="card link" target="_blank" rel="noreferrer" rel="noopener" href="https://www.natethedev.com">Created by Nate Mallison</a>
   </div>
-  <audio src="https://s3.amazonaws.com/freecodecamp/simonSound1.mp3" data-key="1"></audio>
-  <audio src="https://s3.amazonaws.com/freecodecamp/simonSound2.mp3" data-key="2"></audio>
-  <audio src="https://s3.amazonaws.com/freecodecamp/simonSound3.mp3" data-key="3"></audio>
-  <audio src="https://s3.amazonaws.com/freecodecamp/simonSound4.mp3" data-key="4"></audio>
+  <audio src="https://cdn.rawgit.com/NJM8/sounds/master/simonSound1updated.mp3" data-key="1"></audio>
+  <audio src="https://cdn.rawgit.com/NJM8/sounds/master/simonSound2updated.mp3" data-key="2"></audio>
+  <audio src="https://cdn.rawgit.com/NJM8/sounds/master/simonSound3updated.mp3" data-key="3"></audio>
+  <audio src="https://cdn.rawgit.com/NJM8/sounds/master/simonSound4updated.mp3" data-key="4"></audio>
 </body>
 </html>
