--- a/calculator/index.html
+++ b/calculator/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div id="bg">
-      <img data-src="https://s14.postimg.cc/im1z4w4j5/markus-spiske-207946-unsplash-min.jpg" alt="An image of computer code">
+      <img data-src="https://storage.googleapis.com/portfoliopictures/markus-spiske-207946-unsplash-min.jpg" alt="An image of computer code">
     </div>
     <div class="content">
       <div class="calculatorContainer">
