Updated api requests for twitchTV app and localWeather. Updated Twitch popular streamers and added a timer to getNewGifs in localWeather.

--- a/twitchTV/index.html
+++ b/twitchTV/index.html
@@ -31,14 +31,13 @@
       </button>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
         <a class="dropdown-item">freecodecamp</a>
-        <a class="dropdown-item">Ninja</a>
         <a class="dropdown-item">ESL_SC2</a>
         <a class="dropdown-item">OgamingSC2</a>
-        <a class="dropdown-item">RiotGames</a>
-        <a class="dropdown-item">OverwatchLeague</a>
-        <a class="dropdown-item">RocketLeague</a>
-        <a class="dropdown-item">Squeezielive</a>
-        <a class="dropdown-item">shroud</a>
+        <a class="dropdown-item">cretetion</a>
+        <a class="dropdown-item">storbeck</a>
+        <a class="dropdown-item">habathcx</a>
+        <a class="dropdown-item">RobotCaleb</a>
+        <a class="dropdown-item">noobs2ninjas</a>
       </div>
     </div>
   </div>
